--- a/package.json
+++ b/package.json
@@ -5,7 +5,14 @@
   "main": "src/server.js",
   "scripts": {
     "dev": "nodemon src/server.js",
-    "start": "node src/server.js"
+    "start": "node src/server.js",
+    "prisma:generate": "prisma generate --schema=./prisma/schema.prisma",
+    "prisma:migrate": "prisma migrate dev --schema=./prisma/schema.prisma",
+    "prisma:migrate:deploy": "prisma migrate deploy --schema=./prisma/schema.prisma",
+    "prisma:studio": "prisma studio --schema=./prisma/schema.prisma",
+    "prisma:seed": "node prisma/seed.js || true",
+    "db:push": "prisma db push --schema=./prisma/schema.prisma",
+    "db:pull": "prisma db pull --schema=./prisma/schema.prisma"
   },
   "keywords": [],
   "author": "",
